--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-    "name": "consilium-exemplaris",
-    "version": "1.0.0",
-    "main": "index.js",
-    "license": "MIT",
-    "scripts": {
-      "start": "node index",
-      "testrun":"yarn testscript"
-    }
+  "name": "consilium-exemplaris",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "start": "node index",
+    "testrun": "yarn testscript"
+  },
+  "dependencies": {
+    "typeorm": "^0.3.7"
   }
+}
